<resources>
    <string name="app_name">Tour Guide ME</string>
    <string name="category_castles">Castles</string>
    <string name="category_zoo">ZOO Parks</string>
    <string name="category_caves">Caves</string>
    <string name="category_architecture">Architecture</string>
    <string name="category">category</string>
    <string name="tel">tel:</string>
    <string name="goTo">google.navigation:q=</string>
    <string name="subject">Visit - Request for Information</string>
    <string name="crest">crest</string>
    <string name="south_moravian_region">South Moravian Region</string>
    <string name="background">background picture</string>
    <string name="arrow">arrow</string>
    <string name="mapmaker">mapMaker</string>
    <string name="title">Tour Guide ME!</string>
    <string name="address">address</string>
    <string name="place">place</string>
    <string name="info">info</string>
    <string name="phone">phone</string>
    <string name="web">web</string>
    <string name="email">email</string>
    <string name="gps">gps</string>
    <string name="picture">picture</string>
    <string name="place_picture">place picture</string>
    <string name="intro_info1">The South Moravian Region is located in the South East of the Czech Republic
        and shares a border with Austria and Slovakia. It is the fourth largest in area and third largest in number
        of inhabitants among the regions in the Czech Republic. This region is distinguished by its extensive wine growing areas,
        its wealth of folk songs and folk costumes and its surviving folk traditions.</string>
    <string name="intro_info2">The region offers visitors an extensive range of cultural, natural and technical monuments
        (ancient and modern), as well as the opportunity of remarkable folk and vineyard tourism. It boasts two important
        monuments registered as UNESCO World Cultural and Natural Heritage sites</string>
    <string name="castles">Castles</string>
    <string name="zoo">ZOO parks</string>
    <string name="cave">Caves</string>
    <string name="arch">Architecture</string>
    <string name="nameBitov">Bitov</string>
    <string name="nameJaromerice">Jaromerice</string>
    <string name="nameValtice">Lednicce</string>
    <string name="nameVranov">Vranov nad Diji</string>
    <string name="nameVyskov">Dino Park Vyskov</string>
    <string name="nameJihlava">ZOO Jihlava</string>
    <string name="nameDvurKralove">ZOO Dvur Kralove nad Laben</string>
    <string name="nameOstrava">ZOO Ostrava</string>
    <string name="nameMacocha">Machocha Abbys</string>
    <string name="namePunkva">Punkva caves</string>
    <string name="nameTurold">The Na Turoldu Cave</string>
    <string name="nameBozkov">The Bozkov Dolomite Caves</string>
    <string name="nameTugendhat">Vila Tugendhat</string>
    <string name="nameJurkovic">Jurkovicova vila</string>
    <string name="nameLow">Vila Low-Beer</string>
    <string name="nameStiassni">Vila Stiassni</string>
    <string name="infoBitov">The castle was founded in the 11th century on the site of the original Great Moravian fortress and it was the first of a chain of castles to protect the southern border of the Přemyslid state. The first written mention of Bítov Castle dates back to 1061. The castle was founded on a spur on the left bank of the Želetavka river. The castle was divided into three parts separated by each other. His appearance did not differ much from the older fortifications. Bítov took a prominent place in the Znojmo principled principality and stopped the process of German colonization to the north.</string>
    <string name="infoJaromerice">The honourable courtyard echoes with the hoofbeats of arriving horses and carriages carrying ladies in breathtaking dresses accentuating their full feminine curves – a slender waist and full bosom in a frilly neckline. Their escorts are cavaliers in brocade coats and luxuriant wigs. Guests stroll through the French garden, dance or enjoy the delightful tones of period operas. So, step right in and delight in the eternal beauty and fame of Baroque Jaroměřice nad Rokytnou – the Moravian Versailles.</string>
    <string name="infoValtice">Originally a Gothic castle founded in the 12th century by the bishops of Passau, but in 1530 Valtice became the place of residence for the princely family of Liechtenstein. The size and the beauty of the decorations of the entire castle premises demonstrate the wealth of the family. A number of important architects of the 17th and 18th centuries gave it its current shape – Anton Ospel, Anton Erhard Martinelli and Antonio Beduzzi. In 1996, the castle and the castle park were listed by UNESCO as a World Cultural and Natural Heritage Site.</string>
    <string name="infoVranov">The chateau lies on the southern border of the Czech state about 110 kilometres from Vienna and is one of the most valuable buildings of the Central European baroque. It was created with the reconstruction of a royal castle first mentioned in 1100. Its current form bears the imprint of the Althanns, who held it for some 100 years from the late 17th century, together with a significant contribution from the imperial architect Johann Bernhard Fischer of Erlach.  The dominium was then gained by the Polish Mniszeks, who brought about an unprecedented flowering of the famed Vranov factory for the production of earthenware and porcelain.
The chateau is in the western part of Podyjí National Park and a national cultural monument. Visitors can not only take tours of the authentic baroque interiors of the Hall of the Ancestors and the chapel, but can also acquaint themselves with the Vranov Chateau lifestyle from the end of the 18th century and throughout the 19th century.
</string>
    <string name="infoVyskov">DinoPark is built just outsider the town and it reminds of the real Mesozoic era. DinoPark is a unique theme park where you can see about 70 static and movable life-sized prehistoric saurians. These models are very intricate robotic equipments controlled by an air conditioning and a system of computers. Dinosaurs gathered in groups show probable scenes from their lives more than 65 million years ago.
There are benches for tired and a small snack-bar for hungering in the park. There is our obliging staff for you in case of any problem. Our passenger transport and all ZOO PARK and DinoPark areas are efficient for parents with baby buggies and for immobile visitors.
</string>
    <string name="infoJihlava">There are three pavilions opened for visitors: Exotarium with exhibitions on monkeys and reptiles, the Animals of Prey pavilion and Hacienda esconido pavilion. One of the most favourite expositions is the African Vilage!
The new entry area was opened in 2006 and includes among others servis for visitors and exhibition for animals. Visitors are welcome to take a rest and refresh in the restaurant, the sweetshop or the bar. The gift shop offers a variety of souvenirs. An unusual children playground with a Petting Zoo attracts the youngest visitors. There is also a small train that children can ride. The visitors can sit down and take a rest on many benches through the Zoo. The information system helps to improve our knowledge of the animal world. (for detailed information see the map of the Zoo)
</string>
    <string name="infoDvurKralove">The Dvůr Králové Zoo was founded in 1946 as a small town institution. Its history as a modern zoological garden began in the late 1960s when its focus shifted to the breeding of large African ungulates. The man behind this idea, the zoo’s then-director Josef Vágner, conducted eight large African expeditions between the years 1968 and 1975. During these years, the zoo successively imported 2,045 different African animals, including 915 mammals. As a result, the zoo became the most important breeding centre of African ungulates in the world. Thanks to prudent management and improved breeding experience, the zoo began to serve as a genetic reservoir and a reference breeding centre for similar centres not only in Europe, but to some extent elsewhere in the world as well.</string>
    <string name="infoOstrava">Ostrava ZOO was founded as Kuncicky Zoo in 1951. In 1996 Ostrava ZOO became member in the European Association of Zoos and Aquaria (EAZA).
Since 2006, the Ostrava ZOO has been authorised to conduct the ESB (European Studbook) for Common Hippopotamus (Hippopotamus amphibius).
The main the reasons for the establishment of the Common hippo ESB is because of the decreasing population of hippos in the wild.
As one of Africa’s best known aquatic icons, it has been listed as threatened for the first time and is now classified as Vulnerable in the Red list of Endangered Species published by IUCN.
The Ostrava ZOO has many years of experience with keeping and breeding this species. Further, the hippo is in the new heraldry of the ZOO. Moreover, the Ostrava ZOO is currently involved in 40 other EEP (European Endangered Species program) and ESB programs (e.g. for the Siberian tiger, the lion-tailed macaque, the Vietnamese sika deer, and the Diana monkey).
</string>
    <string name="infoMacocha">Famous Macocha Abyss is more than 138 m deep and it is the biggest gorge of its kind in the Czech Republic and even in the Central Europe.The upper part of this nature unique is about 174 m long and 76 m wide. There are two platforms for tourists at the edges. The first one is Upper Bridge constructed in 1882. The second one is little bit lower called Lower Bridge. This lower bridge comes from 1899 and it is about 92 m above the bottom of Macocha that you can see from there.</string>
    <string name="infoPunkva">They are situated in the northern part of the Moravian Karst in the Canyon of Pustý Žleb in the national natural reservation of the Punkva in the protected scenic area called the Moravian Karst. They are the spring up branch of the Punkva hydrographic system, the part of the largest and the longest cave system in the Czech Republic Amateur\' s Cave (its length = 33 km). Punkva Caves consist of the dry part and the water part. Dry parts were discovered gradually in 1909  1914, the water part and its surrounded dry areas were made accessible to tourists in 1920 1933, in some parts discoveries still continue. The total length of all known passages is 4 km with a denivelation of over 187 m. The dry part of the caves has been open to the public already since 1909. The present area of the system has been open to the public since 1933. The boat cruise has been in operation since 1920. The present tourist route is 1250 m long.</string>
    <string name="infoTurold">Cave is situated near the northern edge of the town of Mikulov in the abandoned quarry under the Turold Hill (385 m a.s.l.). It was discovered during stone quarrying in 1951 close to the previously damaged Turold\'s Cave. This cave is a complex and extraordinarily rugged system of corridors, chambers and domes of seven floors. Its total length is 1,650 m with denivelation of 47 m and together with the Liščídíra Cave it is the largest cave system in the Mesozoic limestones of the Czech Republic with a total length 2,800 m. There are walls sculpted and decorated with a unique “Turold-style” which can be found in no other cave in the Czech Republic. It is the only one cave in the Mesozoic limestones of the Czech Republic.</string>
    <string name="addressBitov">Státní hrad Bítov, Bítov 1, 671 07 Uherčice</string>
    <string name="quoteBitov">Large collection of animals</string>
</resources>