<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listTwo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/dim90"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imagePlace"
        android:layout_width="@dimen/dim100"
        android:layout_height="@dimen/dim90"
        android:contentDescription="@string/place"
        android:scaleType="fitXY"
        android:src="@drawable/arch_jurkovic" />

    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim90"
        android:layout_alignBottom="@id/imagePlace"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/imagePlace"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dim40"
        android:paddingStart="16dp">

        <TextView
            android:id="@+id/namePlace"
            style="@style/textListItem"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            tools:text="@string/place" />

        <TextView
            android:id="@+id/quotePlace"
            style="@style/textListItem"
            android:layout_weight="2"
            android:textAppearance="?android:textAppearanceSmall"
            tools:text="@string/quoteBitov" />

    </LinearLayout>

    <ImageView
        android:id="@+id/play_arrow"
        android:layout_width="@dimen/dim25"
        android:layout_height="@dimen/dim25"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/dim16"
        android:contentDescription="@string/arrow"

        android:src="@drawable/ic_play_black_36dp"

        />

</RelativeLayout>